# salt

./: .gitattributes  .glitterrc  Cargo.toml  LICENSE  README.md  install.sh  justfile
.github/: dependabot.yml
.github/chglog/: changelog.yml  release.yml
.github/workflows/: deploy.yml  fmt.yml  prfmt.yml  rust.yml
src/: args.rs  cli.rs  config.rs  get_and_parse.rs  lib.rs  macros.rs  main.rs  node.rs  run.rs  task.rs
vscode-salt/: .gitignore  LICENSE  README.md  package.json  rollup.config.js  tsconfig.json
vscode-salt/src/: SideBar.ts  extension.ts
vscode-salt/webviews/: globals.d.ts  tsconfig.json
vscode-salt/webviews/components/: SideBar.svelte
vscode-salt/webviews/pages/: SideBar.ts
