[package]
name = "salt"
version = "0.1.0"
authors = ["Milo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
serde = { version = "1.0.125", features = ["derive"] }
structopt = "0.3.21"
colored = "2.0.0"
dirs-next = "2.0.0"
anyhow = "1.0.40"