[package]
name = "salt"
version = "0.2.0"
authors = ["Milo123459"]
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }
structopt = "0.3.21"
colored = "2.0.0"
dirs-next = "2.0.0"
anyhow = "1.0.41"
